ohjelmisto ready, time to merge to master

--- a/webkehitys/tehtava7/bandi.html
+++ b/webkehitys/tehtava7/bandi.html
@@ -66,24 +66,24 @@
 				<div class="col-md-12 col-sm-12 col-lg-12 col-xl-12 contentdiv">  
 					<div class="descbox col-12">
 						<img class="profilepic" src="img/jaakkonaama.png"/>
-						<h2 class="profiledesc">Jaakko Heikkilä – Saksofoni</h2>
-						<p class="profiledesc">Jaakko "Jaska" Heikkilä on toisen polven soittajia, jolle saksofoni on ollut osa elämää aina lapsuudesta lähtien. Jaakko on myös hankkinut soittokokemusta eri tanssiyhtyeistä sekä puhallinorkestereista. Jaakon mieluisin instrumentti on tenorisaksofoni, mutta myös altto ja sopraano soivat hänen käsittelyssään kauniisti.
+						<h2 class="profiledesc-img">Jaakko Heikkilä – Saksofoni</h2>
+						<p class="profiledesc-img">Jaakko "Jaska" Heikkilä on toisen polven soittajia, jolle saksofoni on ollut osa elämää aina lapsuudesta lähtien. Jaakko on myös hankkinut soittokokemusta eri tanssiyhtyeistä sekä puhallinorkestereista. Jaakon mieluisin instrumentti on tenorisaksofoni, mutta myös altto ja sopraano soivat hänen käsittelyssään kauniisti.
 						</p>
 					</div>
 					<div class="descbox col-12">
 						<img class="profilepic" src="img/jarinaama.png"/>
-						<h2 class="profiledesc">Jari Mustajärvi – Harmonikka, laulu</h2> 
-						<p class="profiledesc">Yhtyeen puuhamiehenä häärii Jari Mustajärvi, jolle musiikki on ollut rakkain harrastus pikkupojasta lähtien. Jarin pääinstrumentti on harmonikka, mutta myös saksofoni soi välillä. Jari toimii myös laulusolistina useimmissa kappaleissa. </p>
+						<h2 class="profiledesc-img">Jari Mustajärvi – Harmonikka, laulu</h2> 
+						<p class="profiledesc-img">Yhtyeen puuhamiehenä häärii Jari Mustajärvi, jolle musiikki on ollut rakkain harrastus pikkupojasta lähtien. Jarin pääinstrumentti on harmonikka, mutta myös saksofoni soi välillä. Jari toimii myös laulusolistina useimmissa kappaleissa. </p>
 					</div>
 					<div class="descbox col-12">
 						<img class="profilepic" src="img/jukkanaama.png"/>
-						<h2 class="profiledesc">Jukka Kaurila – Bassokitara, laulu, harmonikka</h2> 
-						<p class="profiledesc">Kaurila on monipuolinen muusikko, joka soittaa Taika-yhtyeessä bassoa ja harmonikkaa ja välillä myös rumpuja. Jukka ja Jari tapasivat jo kouluaikoina ja perustivat tuolloin ensimmäisen yhtyeensä, joka soitteli koulun bileissä ym. nuorisotapahtumissa. Sittemmin tiet erkanivat, mutta noin pari vuotta sitten parivaljakko palasi jällleen yhteen. Jukan myötä Taika-yhtyeen musiikkiin on tullut ripaus Beatles vaikutteita, sillä hän on yksi Suomen parhaita Beatles asiantuntijoita.</p>
+						<h2 class="profiledesc-img">Jukka Kaurila – Bassokitara, laulu, harmonikka</h2> 
+						<p class="profiledesc-img">Kaurila on monipuolinen muusikko, joka soittaa Taika-yhtyeessä bassoa ja harmonikkaa ja välillä myös rumpuja. Jukka ja Jari tapasivat jo kouluaikoina ja perustivat tuolloin ensimmäisen yhtyeensä, joka soitteli koulun bileissä ym. nuorisotapahtumissa. Sittemmin tiet erkanivat, mutta noin pari vuotta sitten parivaljakko palasi jällleen yhteen. Jukan myötä Taika-yhtyeen musiikkiin on tullut ripaus Beatles vaikutteita, sillä hän on yksi Suomen parhaita Beatles asiantuntijoita.</p>
 					</div>
 					<div class="descbox col-12">
 						<img class="profilepic" src="img/hannunaama.png"/>
-						<h2 class="profiledesc">Hannu Karvia – Rummut</h2> 
-						<p class="profiledesc">Rumpuja Taika-yhtyeessä soittelee Hannu Karvia, joka on pitkän linjan muusikko. Hannu on soitellut monissa eri kokoonpanoissa erilaista musiikkia, pääpainopistealueenaan tanssimusiikki. Hannu Karvia on pitkän linjan muusikko, joka on keikkaillut yhtäjaksoisesti 70-luvulta lähtien jo yli 40 vuotta. Hannun tarkat kompit luovat tukevan pohjan bändin musiikille ja hän maustaa kappaleita juuri sopivaan paikkaan osuvilla filleillä ja breikeillä - ja mikä parasta, Hannu osaa soittaa rumpuja myös hiljaa, mutta kuitenkin svengaavasti!</p>
+						<h2 class="profiledesc-img">Hannu Karvia – Rummut</h2> 
+						<p class="profiledesc-img">Rumpuja Taika-yhtyeessä soittelee Hannu Karvia, joka on pitkän linjan muusikko. Hannu on soitellut monissa eri kokoonpanoissa erilaista musiikkia, pääpainopistealueenaan tanssimusiikki. Hannu Karvia on pitkän linjan muusikko, joka on keikkaillut yhtäjaksoisesti 70-luvulta lähtien jo yli 40 vuotta. Hannun tarkat kompit luovat tukevan pohjan bändin musiikille ja hän maustaa kappaleita juuri sopivaan paikkaan osuvilla filleillä ja breikeillä - ja mikä parasta, Hannu osaa soittaa rumpuja myös hiljaa, mutta kuitenkin svengaavasti!</p>
 					</div>
 				</div>
 			</div>
