--- a/webkehitys/tehtava7/historia.html
+++ b/webkehitys/tehtava7/historia.html
@@ -15,6 +15,8 @@
 		<script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 		<link rel="stylesheet" href="css/base.css">
+		<link rel="stylesheet" href="css/bandi.css">
+		<link rel="stylesheet" href="css/historia.css">
 		<link href="https://fonts.googleapis.com/css?family=Oswald&display=swap" rel="stylesheet"> 
 		<link href="https://fonts.googleapis.com/css?family=Cabin&display=swap" rel="stylesheet"> 
 		<link rel="icon" href="img/jarijataikalogo.png">
@@ -49,7 +51,16 @@
 				</ul>
 			</div>
 		</nav>
-
+		<div class="container">
+			<div class="row m-3 mx-auto">
+				<div class="col-md-12 col-sm-12 col-lg-12 col-xl-12 contentdiv">  
+					<div class="descbox profiledesc">
+						<h2>Alkua</h2>
+						<p class="historydesc-left">Taika-yhtye sai alkunsa syksyllä 2004, jolloin fonistillamme Jaakko Heikkilällä oli tarve kasata bändi muutamaa keikkaa varten Humppilassa sijaitsevaan Otsolan Hovi ravintolaan. Jaakko tunsi Humppilassa asuvan Olli Kylä-Markulan ja kysyi tätä rumpaliksi, joka puolestaan kysyi Jari Mustajärveä hanuristiksi. Vielä tarvittiin basisti ja laulusolisti. Sekä Jarilla, että Ollilla oli yhteisiä soittokokemuksia loimaalaisen Kyösti Vaittisen kanssa, joten hänet kutsuttiin bändiin mukaan. Yhtye oli näin saanut alkuperäisen kokoonpanonsa. Jaakon myymät keikat hoidettiin sovitusti ja koska homma tuntui toimivan mukavasti päätettiin jatkaa harjoittelua ja keikkailua sitä mukaa kun tilauksia tuli.</p>
+					</div>
+				</div>
+			</div>
+		</div>
 		<footer id="stickyfooter">
 			<div class="container text-center">
 				<div class="row">
