--- a/webkehitys/tehtava7/yhteystiedot.html
+++ b/webkehitys/tehtava7/yhteystiedot.html
@@ -20,7 +20,7 @@
 		<link href="https://fonts.googleapis.com/css?family=Cabin&display=swap" rel="stylesheet"> 
 		<link rel="icon" href="img/jarijataikalogo.png">
 		<script src="https://sdk.scdn.co/spotify-player.js"></script>
-
+		<script src="js/yhteystiedot.js" type="text/javascript"></script>
 	</head>
 	<body>
 		<nav class="navbar navbar-dark navbar-expand-lg bg-light sticky-top" id="navigationbar">
@@ -55,7 +55,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-12">
-					<form name="contactForm" id="contactFormId">
+					<form name="contactForm" id="contactForm">
 						<div class="form-group contentdiv" id="formcontent">
 							<h1 style="text-align: center">Ota yhteyttä</h1>
 							<div class="row">
@@ -75,20 +75,20 @@
 										<input type="email" name="email" class="form-control" required="true" id="contactFormEmail" placeholder="Sähköpostiosoite">
 									</div>
 									<div class="col-md-12 col-lg-12 col-sm-12 col-xs-12 col-xl-12" style="text-align: center;">
-										<label><input class="partybuttons" type="radio" name="partytype"><span>Ravintola/terassi</span></input></label>
-										<label><input class="partybuttons" type="radio" name="partytype"><span>Kesäjuhla</span></input></label>
-										<label><input class="partybuttons" type="radio" name="partytype"><span>Syntymäpäivä</span></input></label>
-										<label><input class="partybuttons" type="radio" name="partytype"><span>Luokkakokous</span></input></label>
-										<label><input class="partybuttons" type="radio" name="partytype"><span>Häät</span></input></label>
-										<label><input class="partybuttons" type="radio" name="partytype"><span>Pikkujoulu</span></input></label>
-										<label><input class="partybuttons" type="radio" name="partytype"><span></span>Muu juhla</span></input></label>
+										<label><input class="partybuttons" required="true" type="radio" name="partytype"><span>Ravintola/terassi</span></input></label>
+										<label><input class="partybuttons" required="true"  type="radio" name="partytype"><span>Kesäjuhla</span></input></label>
+										<label><input class="partybuttons" required="true"  type="radio" name="partytype"><span>Syntymäpäivä</span></input></label>
+										<label><input class="partybuttons" required="true"  type="radio" name="partytype"><span>Luokkakokous</span></input></label>
+										<label><input class="partybuttons" required="true"  type="radio" name="partytype"><span>Häät</span></input></label>
+										<label><input class="partybuttons" required="true"  type="radio" name="partytype"><span>Pikkujoulu</span></input></label>
+										<label><input class="partybuttons" required="true"  type="radio" name="partytype"><span>Muu juhla</span></input></label>
 									</div>
 									<div class="col-12">
 										<h5 style="text-align: center; margin-top: 0.5rem; ">Viesti</h5>
 										<textarea name="message" minlength="5" style="resize: none; width: 100%; height:7rem; border-radius: 5px;" required="true" placeholder="Viesti" id="contactFormMessage"></textarea>
 									</div>
 									<div class="col-12 mt-2">
-										<input type="submit" style="font-size: 24px; background-color: white; border-radius:4px;" value="Lähetä"></input>
+										<input type="submit" id="submitbutton" value="Lähetä"></input>
 									</div>
 							</div>
 						</div>
